src/main/java/semantic/symbolTable/test/passing/manyAttributes.ru
struct A {
    Int a,b,c,d,e,f;
}

struct B:A {
    pri Str g;
}

impl A{.(Int a, Int b, Str c){}}

impl B{.(Int a, Int b, Str c){}}

start {
    Char q,w,e,r,t,y;
}